# rustman

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-build.yml  rust-check.yml  rust-clippy.yml  rust-fmt.yml  rust-test.yml  rust-tests.yml  rust.yml
rustman-lib/: Cargo.toml
rustman-lib/src/: engine.rs  lib.rs  process.rs  procfile.rs
rustman-lib/tests/: Procfile  Procfile.in.test  Procfile2.test  env.sh  test.sh  utf8.sh
src/: main.rs
