[package]
name = "rustman"
version = "0.1.0"
authors = ["ohaddahan <ohaddahan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = "0.1.15"

[dependencies.rustman-lib]
path = "rustman-lib"

[workspace]
members = [
  "rustman-lib",
]